# diff-sync

./: .dockerignore  .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
deploy/: .env.example  Dockerfile  Makefile  docker-compose.yml  nginx.conf
docs/: ARCHITECTURE.md  LIVE_SYNC_DEMO.md  PERSISTENCE_SUMMARY.md
src/: diff.rs  document.rs  lib.rs  network.rs  persistence.rs  session.rs  sync.rs
test/: package-lock.json  package.json  playwright.config.ts
test/e2e/: collaborative.spec.ts
web/: package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/app/[[...slug]]/: client.tsx  page.tsx
web/lib/: cursor-overlay.tsx  diff.ts  editor-view.tsx  editor.tsx  protocol.ts  remote-cursors.ts  sync-engine.ts  use-sync.ts
