[package]
name = "diff-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
# For diff/patch operations - saves us from implementing from scratch
similar = "2.3"
# For serialization if we add network layer
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# For async networking when we get there
tokio = { version = "1.0", features = ["full"], optional = true }
# For CLI interaction
clap = { version = "4.0", features = ["derive"] }
# For colored terminal output
colored = "2.0"
# For random test data
rand = "0.8"
# For SQLite persistence
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
default = ["network"]
network = ["tokio"]

[[bin]]
name = "sync-demo"
path = "src/bin/demo.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
