[package]
name = "diff-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"], optional = true }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
axum = { version = "0.7", features = ["ws"], optional = true }
tower-http = { version = "0.5", features = ["cors", "fs"], optional = true }

[features]
default = ["network"]
network = ["tokio", "axum", "tower-http"]

[[bin]]
name = "sync-demo"
path = "src/bin/demo.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "ws-server"
path = "src/bin/ws_server.rs"
